--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,12 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!--支付宝支付接口依赖-->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>${alipay.version}</version>
+        </dependency>
     </dependencies>
 
 <!--    <build>-->
