--- a/mall-app/pom.xml
+++ b/mall-app/pom.xml
@@ -7,11 +7,12 @@
         <artifactId>cc_mall</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.cc</groupId>
+
     <artifactId>mall-app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mall-app</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.8</java.version>
