--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -12,6 +12,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>mall-admin</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.8</java.version>
