--- a/mall-app/src/main/resources/application.properties
+++ b/mall-app/src/main/resources/application.properties
@@ -2,14 +2,14 @@ server.port=8080
 
 springfox.documentation.enabled=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cc_mall?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://39.107.29.66:3306/cc_mall?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Cc123/.,
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # redis
-spring.redis.host=localhost
+spring.redis.host=39.107.29.66
 spring.redis.port=6379
-spring.redis.password=
+spring.redis.password=cc123/.,
 spring.redis.database=0
 spring.redis.lettuce.pool.max-active=8
 spring.redis.lettuce.pool.max-wait=-1
